// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render maeve input should render component with autocomplete and source as an array 1`] = `
<MaeveInput
  autocomplete={
    Object {
      "source": Array [
        "apple",
        "banana",
        "cat",
        "appollo",
        "caterpillar",
      ],
    }
  }
  id="testComponent"
  label="name"
  onValueUpdate={[Function]}
  placeholder="hello"
>
  <div
    className="maeve-input"
  >
    <styled.label
      htmlFor="testComponent"
    >
      <label
        className="bfLUDv"
        htmlFor="testComponent"
      >
        name
      </label>
    </styled.label>
    <styled.input
      id="testComponent"
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="hello"
      required={false}
      type="text"
      value=""
    >
      <input
        className="jCrKSc"
        id="testComponent"
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="hello"
        required={false}
        type="text"
        value=""
      />
    </styled.input>
  </div>
</MaeveInput>
`;

exports[`render maeve input should render component with just essential props 1`] = `
<div
  className="maeve-input"
>
  <styled.input
    id="testComponent"
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
    type="text"
    value=""
  />
</div>
`;
